--- a/style.css
+++ b/style.css
@@ -164,3 +164,66 @@ justify-content: space-evenly;
 .box-content p{
     color: #007185;
 }
+
+/**footer**/
+.footer{
+    margin-top: 15px;
+    
+}
+.foot-pannel1{
+    background-color: #37475a;
+    color: white;
+    height: 50px;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    font-size: 0.7rem;
+}
+.foot-pannel2{
+    background-color: #222f3d;
+    justify-content: space-evenly;
+    color: white;
+    display: flex;
+    height: 200px;
+    
+}
+.foot-pannel2 ul{
+    margin-top: 20px;
+}
+.foot-pannel2 ul a{
+    display: block;
+    font-size: 0.85rem;
+    margin-top: 10px;
+    color: #dddddd;
+}
+/**pannel3**/
+.foot-pannel3{
+    background-color: #222f3d;
+    border-top: 0.5px solid white;
+    height: 70px;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+.logo{
+    background-image: url(amazon_logo.png);
+    background-size: cover;
+    height: 50px;
+    width: 100px;
+}
+.foot-pannel4{
+    background-color: #0F1111;
+    color: white;
+    height: 80px;
+    text-align: center;
+
+font-size: 0.7rem;
+   
+}
+.foot-pannel4  pages{
+    padding-top: 25px;
+
+}
+.foot-pannel4 copy{
+    padding-top: 5px;
+}
